// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonsSection should match the snapshot 1`] = `
<div
  class="buttons-calculator"
>
  <button
    class="button"
    type="button"
  >
    AC
  </button>
  <button
    class="button"
    type="button"
  >
    +/-
  </button>
  <button
    class="button"
    type="button"
  >
    %
  </button>
  <button
    class="button button-orange"
    type="button"
  >
    ÷
  </button>
  <button
    class="button"
    type="button"
  >
    7
  </button>
  <button
    class="button"
    type="button"
  >
    8
  </button>
  <button
    class="button"
    type="button"
  >
    9
  </button>
  <button
    class="button button-orange"
    type="button"
  >
    x
  </button>
  <button
    class="button"
    type="button"
  >
    4
  </button>
  <button
    class="button"
    type="button"
  >
    5
  </button>
  <button
    class="button"
    type="button"
  >
    6
  </button>
  <button
    class="button button-orange"
    type="button"
  >
    -
  </button>
  <button
    class="button"
    type="button"
  >
    1
  </button>
  <button
    class="button"
    type="button"
  >
    2
  </button>
  <button
    class="button"
    type="button"
  >
    3
  </button>
  <button
    class="button button-orange"
    type="button"
  >
    +
  </button>
  <button
    class="button"
    id="button-0"
    type="button"
  >
    0
  </button>
  <button
    class="button"
    type="button"
  >
    .
  </button>
  <button
    class="button button-orange"
    type="button"
  >
    =
  </button>
</div>
`;

exports[`Calculator should match the snapshot 1`] = `
<div
  class="calculator-section-container"
>
  <h2>
    Let's do some Math
  </h2>
  <div
    class="calculator-container"
  >
    <div
      class="div-result"
    >
      0
    </div>
    <div
      class="buttons-calculator"
    >
      <button
        class="button"
        type="button"
      >
        AC
      </button>
      <button
        class="button"
        type="button"
      >
        +/-
      </button>
      <button
        class="button"
        type="button"
      >
        %
      </button>
      <button
        class="button button-orange"
        type="button"
      >
        ÷
      </button>
      <button
        class="button"
        type="button"
      >
        7
      </button>
      <button
        class="button"
        type="button"
      >
        8
      </button>
      <button
        class="button"
        type="button"
      >
        9
      </button>
      <button
        class="button button-orange"
        type="button"
      >
        x
      </button>
      <button
        class="button"
        type="button"
      >
        4
      </button>
      <button
        class="button"
        type="button"
      >
        5
      </button>
      <button
        class="button"
        type="button"
      >
        6
      </button>
      <button
        class="button button-orange"
        type="button"
      >
        -
      </button>
      <button
        class="button"
        type="button"
      >
        1
      </button>
      <button
        class="button"
        type="button"
      >
        2
      </button>
      <button
        class="button"
        type="button"
      >
        3
      </button>
      <button
        class="button button-orange"
        type="button"
      >
        +
      </button>
      <button
        class="button"
        id="button-0"
        type="button"
      >
        0
      </button>
      <button
        class="button"
        type="button"
      >
        .
      </button>
      <button
        class="button button-orange"
        type="button"
      >
        =
      </button>
    </div>
  </div>
</div>
`;

exports[`renders Home component without errors 1`] = `
<div
  class="home-container"
>
  <h1>
    Welcome to Math Magicians App!
  </h1>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in lacus molestie, dapibus risus in, mollis arcu. Donec eget ultricies lorem. Quisque ut nisi eu massa condimentum pellentesque. Curabitur mauris purus, posuere et ante ac, finibus porta lorem. Duis eget ultricies magna. Aliquam ac orci eu tortor sollicitudin tincidunt. Integer consequat, ante ac pulvinar hendrerit, odio urna pellentesque odio, placerat convallis elit augue nec nulla. Nunc leo purus, auctor at mauris ut, facilisis consequat neque. Aenean ac orci neque. Morbi ac ipsum a erat bibendum rhoncus. Nunc et mattis erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc faucibus sollicitudin semper. Donec quis elit sed ipsum dapibus ornare eget sit amet mauris.
  </p>
  <p>
    <br />
    Morbi blandit gravida turpis at congue. Donec vel leo pretium elit gravida eleifend. Duis efficitur turpis lorem, vitae cursus nisl sollicitudin ut. Vestibulum erat tellus, convallis ut est id, volutpat euismod libero. Ut eu tellus a nisi gravida facilisis et et dui. Cras mollis ullamcorper quam sed tempor. Etiam commodo a ante vitae sagittis. In cursus elit nec justo aliquet laoreet. Proin ut mi ipsum. Nullam non leo orci. Etiam pulvinar et nisl non consequat.
  </p>
</div>
`;
